--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,11 @@
 opencv-contrib-python==4.8.1.78
 numpy==1.24.3
 
+# Web service for file upload
+Flask==2.3.2
+Werkzeug==2.3.6
+requests==2.31.0
+
 # Testing
 pytest==7.4.2
 pytest-cov==4.1.0
